# sandbox

./: CMakeLists.txt  readme.md
.github/workflows/: build-development.yml  build-main.yml  build-staging.yml
conf/: settings.json
dev/: CMakeLists.txt  build.py  install.py  update_env.py
dev/docker/: Dockerfile.app  docker-compose.yml
dev/ide/.devcontainer/: devcontainer.json  docker-compose.extended.yml
dev/python/: dev.py
docs/dev/: build_instructions.md  development_environments.md
src/: CMakeLists.txt  Main.cpp
src/app/: App.cpp  App.h  CMakeLists.txt
src/ui/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
